# picolibc-rs

./: .gitmodules  Cargo.toml  README.md  build.rs  build_files.rs
.github/workflows/: cicd.yml
include/: picolibc.h
src/: lib.rs  malloc.rs
