[package]
name = "picolibc"
version = "0.0.5"
edition = "2021"
rust-version = "1.74"
license = "Apache-2.0"
description = """
Builds picolibc from source and statically links it into Rust, for baremetal
targets such as UEFI. Generates Rust bindings to the libc/libm types and
functions, and exposes the C include directory to downstream -sys crates so
they can compile/link further C libraries against the same libc.
"""
repository = "https://github.com/jc-lab/picolibc-rs"
readme = "README.md"
keywords = ["picolibc", "libc", "baremetal", "uefi", "no_std"]
categories = ["no-std", "external-ffi-bindings", "embedded"]
# `links = "c"` claims the native "c" library for this build graph and makes the
# `cargo::metadata=include=...` keys emitted by build.rs available to dependents
# as the `DEP_C_INCLUDE` environment variable.
links = "c"
exclude = [
    "third_party/picolibc/test/*",
    "third_party/picolibc/doc/*",
    "third_party/picolibc/.github/*",
]

[lib]
# Pure FFI/bindings crate; no doctests against the generated bindings.
doctest = false

[features]
default = [
    "bindings",
    # Defaults match meson_options.txt values exactly.
    "assert-verbose",   # assert-verbose = true
    "fast-strcmp",      # fast-strcmp    = true
    "io-c99-formats",   # io-c99-formats = true
    "io-float-exact",   # io-float-exact = true
]

# ── Core ─────────────────────────────────────────────────────────────────────

# Generate Rust FFI bindings with bindgen at build time. Requires libclang.
# Disable with `default-features = false` when you only need the static lib.
bindings = ["dep:bindgen"]

# Export malloc/free/realloc/calloc/aligned_alloc/memalign/posix_memalign
# (C ABI) backed by the Rust global allocator.
# Requires a `#[global_allocator]` in the final binary.
# Implementation ported from hyperlight_guest_bin::memory (Apache-2.0).
malloc = []

# ── stdio ────────────────────────────────────────────────────────────────────

# Wire stdin/stdout/stderr to POSIX file descriptors 0/1/2 via read()/write().
# When disabled, the embedder must provide its own stdin/stdout/stderr symbols.
# Corresponds to meson option: posix-console
posix-console = []

# COFF/PE target fixups (UEFI, *-windows-*).
# picolibc exports stdin/stdout/stderr as *weak aliases* of __posix_std*
# (`__weak_reference`). On COFF the weak-alias machinery is emitted via a
# Mach-O `.weak_reference` directive and produces a broken weak external that
# the COFF linker reports as a duplicate symbol. Enabling this feature patches
# the posix-console sources at build time to use a *strong* alias
# (`__strong_reference`, i.e. __attribute__((alias))), yielding a single normal
# strong stdin/stdout/stderr symbol. Only affects the build when `posix-console`
# is also enabled. Enable this for UEFI / Windows targets.
coff = []

# Enable C99 printf/scanf formats: %zu, %hhu, %td, %jd, etc.
# Corresponds to meson option: io-c99-formats  (__IO_C99_FORMATS)
io-c99-formats = []

# Enable %lld/%llu/%llo/%llx in printf/scanf.
# Corresponds to meson option: io-long-long  (__IO_LONG_LONG)
io-long-long = []

# Enable %Lf/%Le/%Lg (long double) in printf/scanf.
# Corresponds to meson option: io-long-double  (__IO_LONG_DOUBLE)
io-long-double = []

# Enable POSIX positional arguments (%1$d) in printf.
# Corresponds to meson option: io-pos-args  (__IO_POS_ARGS)
io-pos-args = []

# Enable %b/%B binary integer format in printf/scanf (C23).
# Corresponds to meson option: io-percent-b  (__IO_PERCENT_B)
io-percent-b = []

# Enable %n (write-bytes-so-far) in printf. Off by default for safety.
# Corresponds to meson option: printf-percent-n  (__IO_PERCENT_N)
printf-percent-n = []

# Enable %lld in the minimal printf/scanf variant.
# Corresponds to meson option: minimal-io-long-long  (__IO_MINIMAL_LONG_LONG)
minimal-io-long-long = []

# Use round-trip–accurate float↔string conversion.
# Corresponds to meson option: io-float-exact  (__IO_FLOAT_EXACT)
io-float-exact = []

# Enable wide-character support (%ls/%lc) in printf/scanf.
# Corresponds to meson option: io-wchar  (__IO_WCHAR)
io-wchar = []

# Use faster buffered-I/O operations.
# Corresponds to meson option: fast-bufio  (__FAST_BUFIO)
fast-bufio = []

# ── string ───────────────────────────────────────────────────────────────────

# Always optimise strcmp for performance (vs size).
# Corresponds to meson option: fast-strcmp  (__FAST_STRCMP)
fast-strcmp = []

# ── diagnostics ──────────────────────────────────────────────────────────────

# Emit verbose file/line info in assert() failures.
# Corresponds to meson option: assert-verbose  (__ASSERT_VERBOSE)
assert-verbose = []

# ── internationalisation ─────────────────────────────────────────────────────

# Enable multibyte / UTF-8 charset support.
# Corresponds to meson option: mb-capable  (__MB_CAPABLE)
mb-capable = []

# ── math ─────────────────────────────────────────────────────────────────────

# Set errno in math functions per C standard (disables IEEE no-errno mode).
# Corresponds to meson option: want-math-errno  (__MATH_ERRNO / !__IEEE_LIBM)
math-errno = []

[build-dependencies]
anyhow = "1"
cc = "1.2"
bindgen = { version = "0.72", features = ["prettyplease"], optional = true }

[package.metadata.docs.rs]
# docs.rs has no cross C toolchain for baremetal targets; document on the host.
default-target = "x86_64-unknown-linux-gnu"
